# radiocarbon-pipeline

./: .commit  .gitignore  .gitmodules  Dockerfile  README.md  dune-project  flake.nix  radiocarbon.opam  run.sh
inputs/: Tab_art_Carcaillet_etal_2020.csv  denmark.csv  denmark2.csv  denmark3.csv
outputs/: Tab_art_Carcaillet_etal_2020.out.csv
scripts/: carcaillet_aussois.csv  carcaillet_lanslevillard.csv  carcaillet_smm.csv  config  flake.nix  script.r  script2.r  script_optimized.r  shell.nix
src/: cache.ml  config_cache.ml  current_gitfile.ml  custom_git.ml  custom_nix.ml  dune  folder_cache.ml  git_cache.ml  hash_cache.ml  import.ml  index.ml  job_cache.ml  main.ml  main.mli  pipeline.ml  pipeline.mli  pipeline_cache.ml  script_cache.ml
var/db/: sqlite.db-shm  sqlite.db-wal
