(executable
 (public_name example)
 (name main)
 (libraries
   current
   current.cache
   current_git
   current_web
   current_github
   current_nix
   digestif
   cmdliner
   lwt
   lwt.unix
   ppx_deriving_yojson.runtime
   prometheus-app.unix)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson)))
